Spring/src/Spring/src/Grammar/gen/SpringParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from /home/Ilya.Kaysin/Dropbox/AU/5/IDE/spring-lang/Spring/src/Spring/src/Grammar/Spring.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
[System.CLSCompliant(false)]
public partial class SpringParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		IF=1, THEN=2, ELIF=3, ELSE=4, FI=5, FOR=6, WHILE=7, DO=8, OD=9, CASE=10, 
		ESAC=11, REPEAT=12, UNTIL=13, LOCAL=14, OF=15, LENGTH=16, RETURN=17, SKIP_KW=18, 
		FUN=19, ASSIGN=20, OP_DISJ=21, OP_CONJ=22, OP_EQ=23, OP_CMP=24, OP_ADD=25, 
		OP_MUL=26, IDENT=27, DECIMAL=28, TIC=29, DOT=30, COMMA=31, WILDCARD=32, 
		ARROW=33, SEMI=34, BAR=35, LBRACK=36, RBRACK=37, LPAR=38, RPAR=39, LCURL=40, 
		RCURL=41, WS=42, COMMENT_1=43, COMMENT_2=44, UNKNOWN=45;
	public const int
		RULE_program = 0, RULE_funDef = 1, RULE_localVariables = 2, RULE_localVariableList = 3, 
		RULE_functionParameterList = 4, RULE_block = 5, RULE_blockWithBraces = 6, 
		RULE_statement = 7, RULE_stmtCall = 8, RULE_loopBlock = 9, RULE_stmtFor = 10, 
		RULE_stmtWhile = 11, RULE_stmtRepeat = 12, RULE_stmtCase = 13, RULE_caseList = 14, 
		RULE_caseListElement = 15, RULE_casePattern = 16, RULE_casePatternList = 17, 
		RULE_stmtIf = 18, RULE_elifBranch = 19, RULE_elseBranch = 20, RULE_stmtAssignment = 21, 
		RULE_arrayIndex = 22, RULE_stmtReturn = 23, RULE_stmtSkip = 24, RULE_atomExpression = 25, 
		RULE_expression = 26, RULE_functionCall = 27, RULE_expressionList = 28, 
		RULE_sExpr = 29, RULE_array = 30, RULE_arrayElementList = 31, RULE_tag = 32, 
		RULE_identifier = 33, RULE_number = 34;
	public static readonly string[] ruleNames = {
		"program", "funDef", "localVariables", "localVariableList", "functionParameterList", 
		"block", "blockWithBraces", "statement", "stmtCall", "loopBlock", "stmtFor", 
		"stmtWhile", "stmtRepeat", "stmtCase", "caseList", "caseListElement", 
		"casePattern", "casePatternList", "stmtIf", "elifBranch", "elseBranch", 
		"stmtAssignment", "arrayIndex", "stmtReturn", "stmtSkip", "atomExpression", 
		"expression", "functionCall", "expressionList", "sExpr", "array", "arrayElementList", 
		"tag", "identifier", "number"
	};

	private static readonly string[] _LiteralNames = {
		null, "'if'", "'then'", "'elif'", "'else'", "'fi'", "'for'", "'while'", 
		"'do'", "'od'", "'case'", "'esac'", "'repeat'", "'until'", "'local'", 
		"'OF'", "'length'", "'return'", "'skip'", "'fun'", "':='", "'!!'", "'&&'", 
		null, null, null, null, null, null, "'''", "'.'", "','", "'_'", "'->'", 
		"';'", "'|'", "'['", "']'", "'('", "')'", "'{'", "'}'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "IF", "THEN", "ELIF", "ELSE", "FI", "FOR", "WHILE", "DO", "OD", 
		"CASE", "ESAC", "REPEAT", "UNTIL", "LOCAL", "OF", "LENGTH", "RETURN", 
		"SKIP_KW", "FUN", "ASSIGN", "OP_DISJ", "OP_CONJ", "OP_EQ", "OP_CMP", "OP_ADD", 
		"OP_MUL", "IDENT", "DECIMAL", "TIC", "DOT", "COMMA", "WILDCARD", "ARROW", 
		"SEMI", "BAR", "LBRACK", "RBRACK", "LPAR", "RPAR", "LCURL", "RCURL", "WS", 
		"COMMENT_1", "COMMENT_2", "UNKNOWN"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Spring.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static SpringParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public SpringParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public SpringParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(SpringParser.Eof, 0); }
		public FunDefContext[] funDef() {
			return GetRuleContexts<FunDefContext>();
		}
		public FunDefContext funDef(int i) {
			return GetRuleContext<FunDefContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISpringListener typedListener = listener as ISpringListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISpringListener typedListener = listener as ISpringListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISpringVisitor<TResult> typedVisitor = visitor as ISpringVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			State = 80;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case IF:
			case FOR:
			case WHILE:
			case CASE:
			case REPEAT:
			case RETURN:
			case SKIP_KW:
			case FUN:
			case IDENT:
				EnterOuterAlt(_localctx, 1);
				{
				State = 73;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==FUN) {
					{
					{
					State = 70; funDef();
					}
					}
					State = 75;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 76; block();
				State = 77; Match(Eof);
				}
				break;
			case Eof:
				EnterOuterAlt(_localctx, 2);
				{
				State = 79; Match(Eof);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunDefContext : ParserRuleContext {
		public ITerminalNode FUN() { return GetToken(SpringParser.FUN, 0); }
		public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public ITerminalNode LPAR() { return GetToken(SpringParser.LPAR, 0); }
		public ITerminalNode RPAR() { return GetToken(SpringParser.RPAR, 0); }
		public BlockWithBracesContext blockWithBraces() {
			return GetRuleContext<BlockWithBracesContext>(0);
		}
		public FunctionParameterListContext functionParameterList() {
			return GetRuleContext<FunctionParameterListContext>(0);
		}
		public LocalVariablesContext localVariables() {
			return GetRuleContext<LocalVariablesContext>(0);
		}
		public FunDefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_funDef; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISpringListener typedListener = listener as ISpringListener;
			if (typedListener != null) typedListener.EnterFunDef(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISpringListener typedListener = listener as ISpringListener;
			if (typedListener != null) typedListener.ExitFunDef(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISpringVisitor<TResult> typedVisitor = visitor as ISpringVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunDef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunDefContext funDef() {
		FunDefContext _localctx = new FunDefContext(Context, State);
		EnterRule(_localctx, 2, RULE_funDef);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 82; Match(FUN);
			State = 83; identifier();
			State = 84; Match(LPAR);
			State = 86;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==IDENT) {
				{
				State = 85; functionParameterList();
				}
			}

			State = 88; Match(RPAR);
			State = 90;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==LOCAL) {
				{
				State = 89; localVariables();
				}
			}

			State = 92; blockWithBraces();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LocalVariablesContext : ParserRuleContext {
		public ITerminalNode LOCAL() { return GetToken(SpringParser.LOCAL, 0); }
		public LocalVariableListContext localVariableList() {
			return GetRuleContext<LocalVariableListContext>(0);
		}
		public LocalVariablesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_localVariables; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISpringListener typedListener = listener as ISpringListener;
			if (typedListener != null) typedListener.EnterLocalVariables(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISpringListener typedListener = listener as ISpringListener;
			if (typedListener != null) typedListener.ExitLocalVariables(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISpringVisitor<TResult> typedVisitor = visitor as ISpringVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLocalVariables(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LocalVariablesContext localVariables() {
		LocalVariablesContext _localctx = new LocalVariablesContext(Context, State);
		EnterRule(_localctx, 4, RULE_localVariables);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 94; Match(LOCAL);
			State = 95; localVariableList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LocalVariableListContext : ParserRuleContext {
		public IdentifierContext[] identifier() {
			return GetRuleContexts<IdentifierContext>();
		}
		public IdentifierContext identifier(int i) {
			return GetRuleContext<IdentifierContext>(i);
		}
		public ITerminalNode[] COMMA() { return GetTokens(SpringParser.COMMA); }
		public ITerminalNode COMMA(int i) {
			return GetToken(SpringParser.COMMA, i);
		}
		public LocalVariableListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_localVariableList; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISpringListener typedListener = listener as ISpringListener;
			if (typedListener != null) typedListener.EnterLocalVariableList(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISpringListener typedListener = listener as ISpringListener;
			if (typedListener != null) typedListener.ExitLocalVariableList(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISpringVisitor<TResult> typedVisitor = visitor as ISpringVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLocalVariableList(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LocalVariableListContext localVariableList() {
		LocalVariableListContext _localctx = new LocalVariableListContext(Context, State);
		EnterRule(_localctx, 6, RULE_localVariableList);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 97; identifier();
			State = 102;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMMA) {
				{
				{
				State = 98; Match(COMMA);
				State = 99; identifier();
				}
				}
				State = 104;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionParameterListContext : ParserRuleContext {
		public IdentifierContext[] identifier() {
			return GetRuleContexts<IdentifierContext>();
		}
		public IdentifierContext identifier(int i) {
			return GetRuleContext<IdentifierContext>(i);
		}
		public ITerminalNode[] COMMA() { return GetTokens(SpringParser.COMMA); }
		public ITerminalNode COMMA(int i) {
			return GetToken(SpringParser.COMMA, i);
		}
		public FunctionParameterListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_functionParameterList; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISpringListener typedListener = listener as ISpringListener;
			if (typedListener != null) typedListener.EnterFunctionParameterList(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISpringListener typedListener = listener as ISpringListener;
			if (typedListener != null) typedListener.ExitFunctionParameterList(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISpringVisitor<TResult> typedVisitor = visitor as ISpringVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunctionParameterList(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunctionParameterListContext functionParameterList() {
		FunctionParameterListContext _localctx = new FunctionParameterListContext(Context, State);
		EnterRule(_localctx, 8, RULE_functionParameterList);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 105; identifier();
			State = 110;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMMA) {
				{
				{
				State = 106; Match(COMMA);
				State = 107; identifier();
				}
				}
				State = 112;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockContext : ParserRuleContext {
		public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public ITerminalNode[] SEMI() { return GetTokens(SpringParser.SEMI); }
		public ITerminalNode SEMI(int i) {
			return GetToken(SpringParser.SEMI, i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_block; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISpringListener typedListener = listener as ISpringListener;
			if (typedListener != null) typedListener.EnterBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISpringListener typedListener = listener as ISpringListener;
			if (typedListener != null) typedListener.ExitBlock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISpringVisitor<TResult> typedVisitor = visitor as ISpringVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockContext block() {
		BlockContext _localctx = new BlockContext(Context, State);
		EnterRule(_localctx, 10, RULE_block);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 113; statement();
			State = 118;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==SEMI) {
				{
				{
				State = 114; Match(SEMI);
				State = 115; statement();
				}
				}
				State = 120;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockWithBracesContext : ParserRuleContext {
		public ITerminalNode LCURL() { return GetToken(SpringParser.LCURL, 0); }
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public ITerminalNode RCURL() { return GetToken(SpringParser.RCURL, 0); }
		public BlockWithBracesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_blockWithBraces; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISpringListener typedListener = listener as ISpringListener;
			if (typedListener != null) typedListener.EnterBlockWithBraces(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISpringListener typedListener = listener as ISpringListener;
			if (typedListener != null) typedListener.ExitBlockWithBraces(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISpringVisitor<TResult> typedVisitor = visitor as ISpringVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlockWithBraces(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockWithBracesContext blockWithBraces() {
		BlockWithBracesContext _localctx = new BlockWithBracesContext(Context, State);
		EnterRule(_localctx, 12, RULE_blockWithBraces);
		try {
			State = 127;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 121; Match(LCURL);
				State = 122; block();
				State = 123; Match(RCURL);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 125; Match(LCURL);
				State = 126; Match(RCURL);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public StmtCallContext stmtCall() {
			return GetRuleContext<StmtCallContext>(0);
		}
		public StmtForContext stmtFor() {
			return GetRuleContext<StmtForContext>(0);
		}
		public StmtWhileContext stmtWhile() {
			return GetRuleContext<StmtWhileContext>(0);
		}
		public StmtRepeatContext stmtRepeat() {
			return GetRuleContext<StmtRepeatContext>(0);
		}
		public StmtCaseContext stmtCase() {
			return GetRuleContext<StmtCaseContext>(0);
		}
		public StmtIfContext stmtIf() {
			return GetRuleContext<StmtIfContext>(0);
		}
		public StmtAssignmentContext stmtAssignment() {
			return GetRuleContext<StmtAssignmentContext>(0);
		}
		public StmtReturnContext stmtReturn() {
			return GetRuleContext<StmtReturnContext>(0);
		}
		public StmtSkipContext stmtSkip() {
			return GetRuleContext<StmtSkipContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISpringListener typedListener = listener as ISpringListener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISpringListener typedListener = listener as ISpringListener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISpringVisitor<TResult> typedVisitor = visitor as ISpringVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 14, RULE_statement);
		try {
			State = 138;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,8,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 129; stmtCall();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 130; stmtFor();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 131; stmtWhile();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 132; stmtRepeat();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 133; stmtCase();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 134; stmtIf();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 135; stmtAssignment();
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 136; stmtReturn();
				}
				break;
			case 9:
				EnterOuterAlt(_localctx, 9);
				{
				State = 137; stmtSkip();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StmtCallContext : ParserRuleContext {
		public FunctionCallContext functionCall() {
			return GetRuleContext<FunctionCallContext>(0);
		}
		public StmtCallContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stmtCall; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISpringListener typedListener = listener as ISpringListener;
			if (typedListener != null) typedListener.EnterStmtCall(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISpringListener typedListener = listener as ISpringListener;
			if (typedListener != null) typedListener.ExitStmtCall(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISpringVisitor<TResult> typedVisitor = visitor as ISpringVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStmtCall(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StmtCallContext stmtCall() {
		StmtCallContext _localctx = new StmtCallContext(Context, State);
		EnterRule(_localctx, 16, RULE_stmtCall);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 140; functionCall();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LoopBlockContext : ParserRuleContext {
		public ITerminalNode DO() { return GetToken(SpringParser.DO, 0); }
		public ITerminalNode OD() { return GetToken(SpringParser.OD, 0); }
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public LoopBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_loopBlock; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISpringListener typedListener = listener as ISpringListener;
			if (typedListener != null) typedListener.EnterLoopBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISpringListener typedListener = listener as ISpringListener;
			if (typedListener != null) typedListener.ExitLoopBlock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISpringVisitor<TResult> typedVisitor = visitor as ISpringVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLoopBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LoopBlockContext loopBlock() {
		LoopBlockContext _localctx = new LoopBlockContext(Context, State);
		EnterRule(_localctx, 18, RULE_loopBlock);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 142; Match(DO);
			State = 144;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << FOR) | (1L << WHILE) | (1L << CASE) | (1L << REPEAT) | (1L << RETURN) | (1L << SKIP_KW) | (1L << IDENT))) != 0)) {
				{
				State = 143; block();
				}
			}

			State = 146; Match(OD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StmtForContext : ParserRuleContext {
		public ITerminalNode FOR() { return GetToken(SpringParser.FOR, 0); }
		public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public ITerminalNode[] COMMA() { return GetTokens(SpringParser.COMMA); }
		public ITerminalNode COMMA(int i) {
			return GetToken(SpringParser.COMMA, i);
		}
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public LoopBlockContext loopBlock() {
			return GetRuleContext<LoopBlockContext>(0);
		}
		public StmtForContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stmtFor; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISpringListener typedListener = listener as ISpringListener;
			if (typedListener != null) typedListener.EnterStmtFor(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISpringListener typedListener = listener as ISpringListener;
			if (typedListener != null) typedListener.ExitStmtFor(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISpringVisitor<TResult> typedVisitor = visitor as ISpringVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStmtFor(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StmtForContext stmtFor() {
		StmtForContext _localctx = new StmtForContext(Context, State);
		EnterRule(_localctx, 20, RULE_stmtFor);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 148; Match(FOR);
			State = 149; statement();
			State = 150; Match(COMMA);
			State = 151; expression(0);
			State = 152; Match(COMMA);
			State = 153; statement();
			State = 154; loopBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
